fin seance n°1
